<resources>
    <string name="app_name">Epic Running Sim</string>
    <string name="start_run_Button">Start Running</string>
    <string name="settings">Settings</string>
    <string name="story">Story</string>
    <string name="back_button">Back</string>
    <string name="story_text">In this game you are a runner who\'s trying to buy a new pair of shoes. You go for runs to earn coins, and use those coins to buy a pair of shoes. You can also buy upgrades with the coins, which allows you to earn more coins per run. Happy running!</string>
    <string name="clear_progress_button">Clear Game Progress</string>
    <string name="results">End Run Results</string>
    <string name="coins_collected">Coins per Run:</string>
    <string name="total_coins">Total Coins:</string>
    <string name="delete_message">Your coins and upgrades have been set to 0.</string>
    <string name="upgrades">Upgrades:</string>
    <string name="upgrade_button">Buy an Upgrade</string>
    <string name="no_coins_message">You don\'t have enough coins!</string>
    <string name="run_button">Go for a run</string>
    <string name="no_coins_shoes">You need 1,000,000 coins to buy the shoes.</string>
    <string name="win_message">Congradulations, you\'ve won! With lots of effort and perseverence, you\'ve managed to collect 1,000,000 coins. Now you can buy that new pair of shoes you\'ve always wanted.</string>
    <string name="buy_shoes_button">Buy the shoes</string>
    <string name="play_again" translatable="false">Play Again</string>
    <string name="too_many_coins">Don\'t you have enough coins?</string>
    <string name="too_many_upgrades">Don\'t you have enough upgrades?</string>
</resources>
